--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,6 @@ jobs:
       # Upload na itch.io
       - name: Upload to itch.io
         run: |
-          butler push build/WebGL Isormour/game:MultiKulti
+          butler push build/WebGL isormour/game:multikulti
         env:
           BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
