--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Build project
         uses: game-ci/unity-builder@v4
         with:
+          email: ${{ secrets.UNITY_EMAIL }}
+          password: ${{ secrets.UNITY_PASSWORD }}
           serial: ''   # dla licencji Personal zostaw puste
           targetPlatform: WebGL
           unityVersion: 6000.0.50f1   # sprawdź w ProjectVersion.txt
