--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - release
 jobs:
-  build: null
+  #build: null
   deploy:
     name: Deploy to itch.io
     runs-on: ubuntu-latest
-    needs: build
+    #needs: build
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -18,7 +18,6 @@ jobs:
       - name: Download file
         run: >
           curl -L -o build.zip
-
           https://github.com/Isormour/MultiKulti/actions/runs/17189078078/artifacts/3837839797
       - name: Download and extract butler
         run: |
