--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,19 +5,47 @@ on:
     branches:
       - release
 jobs:
-  #build: null
+  build:
+    name: Build Unity Project
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/cache@v3
+        with:
+          path: Library
+          key: Library-${{ runner.os }}-${{ github.sha }}
+          restore-keys: |
+            Library-${{ runner.os }}-
+      - name: Build project
+        uses: game-ci/unity-builder@v4
+        with:
+          email: ${{ secrets.UNITY_EMAIL }}
+          password: ${{ secrets.UNITY_PASSWORD }}
+          serial: ""
+          targetPlatform: WebGL
+          unityVersion: 6000.0.50f1
+        env:
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_VERSION: 6000.0.50f1
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Build
+          path: build
   deploy:
     name: Deploy to itch.io
     runs-on: ubuntu-latest
-    #needs: build
+    needs: build
     steps:
       - uses: actions/download-artifact@v4
-       # with:
-       #   name: Build
-       #   path: build
-      - name: Download file
-        run: >
-          curl -L https://raw.githubusercontent.com/Isormour/MultiKulti/release/WebBuild2.zip -o build.zip
+        with:
+          name: Build
+          path: build
+      - name: Zip WebGL build
+        run: |
+          cd build/WebGL
+          zip -r ../../WebGLBuild.zip .    
       - name: Download and extract butler
         run: |
           curl -L https://broth.itch.ovh/butler/linux-amd64/LATEST/archive/default -o butler.zip
@@ -29,6 +57,6 @@ jobs:
           sudo mv butler_extracted/butler /usr/local/bin/butler
       - name: Upload to itch.io
         run: |
-          butler push build.zip isormour/multikulti:html5
+          butler push WebGLBuild.zip isormour/multikulti:html5
         env:
           BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
