--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           email: ${{ secrets.UNITY_EMAIL }}
           password: ${{ secrets.UNITY_PASSWORD }}
           serial: ""
-          targetPlatform: WebGL
+          targetPlatform: StandaloneWindows64
           unityVersion: 6000.0.50f1
         env:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
